// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dom-rendering event activeContract-txAwaitingApproval should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txAwaitingApproval bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>You have a previous transaction waiting for you to confirm</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txAwaitingApproval should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txAwaitingApproval bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txAwaitingApproval inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmReminder should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txConfirmReminder bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Please confirm your transaction to continue (hint: the transaction window may be behind your browser)</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmReminder should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txConfirmReminder bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmReminder inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmed should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has succeeded</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmed should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmed inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmedClient should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmedClient bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has succeeded</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmedClient should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmedClient bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmedClient inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txFailed should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txFailed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has failed</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txFailed should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txFailed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txFailed inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txPending should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txPending bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has started</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txPending should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txPending bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txPending inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txRequest should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txRequest bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction is waiting for you to confirm</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txRequest should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txRequest bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txRequest inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txSendFail should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txSendFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>You rejected the transaction</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txSendFail should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txSendFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txSendFail inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txSent should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txSent bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction has been sent to the network</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txSent should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txSent bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txSent inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txStall should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txStall bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has stalled</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txStall should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txStall bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txStall inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activePreflight-nsfFail should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-nsfFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>You have insufficient funds to complete this transaction</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activePreflight-nsfFail should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-nsfFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>nsfFail inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activePreflight-txRepeat should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txRepeat bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>This could be a repeat transaction</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activePreflight-txRepeat should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txRepeat bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txRepeat inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txAwaitingApproval should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txAwaitingApproval bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>You have a previous transaction waiting for you to confirm</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txAwaitingApproval should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txAwaitingApproval bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txAwaitingApproval inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmReminder should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txConfirmReminder bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Please confirm your transaction to continue (hint: the transaction window may be behind your browser)</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmReminder should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txConfirmReminder bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmReminder inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmed should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has succeeded</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmed should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmed inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmedClient should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmedClient bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has succeeded</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmedClient should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmedClient bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmedClient inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txFailed should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txFailed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has failed</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txFailed should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txFailed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txFailed inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txPending should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txPending bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has started</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txPending should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txPending bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txPending inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txRequest should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txRequest bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction is waiting for you to confirm</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txRequest should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txRequest bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txRequest inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txSendFail should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txSendFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>You rejected the transaction</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txSendFail should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txSendFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txSendFail inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txSent should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txSent bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction has been sent to the network</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txSent should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txSent bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txSent inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txStall should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txStall bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has stalled</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txStall should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txStall bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txStall inlineCustomMsg msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event initialize-mobileBlocked should trigger correct DOM render 1`] = `
"
    
  <div class=\\"bn-onboard-modal-shade\\">
    <div id=\\"bn-mobile-not-supported\\" class=\\"bn-onboard\\">
      <div class=\\"bn-onboard-modal bn-onboard-alert\\">
        <a href=\\"#\\" class=\\"bn-onboard-close\\">
          <span class=\\"bn-onboard-close-x\\"></span>
        </a>
        
	  <img src=\\"[object Object]\\" alt=\\"MobileNot Supported\\" srcset=\\"[object Object] 2x\\">
  
        <br><br>
        <h1 class=\\"h4\\">Mobile Not Supported</h1>
        <p>Our distributed application does not support mobile browsers. Please visit our site on a desktop browser. Thank you!</p>
        <br>
        
        
    <div class=\\"bn-onboarding-branding\\">
      <p>Powered by
      <a href=\\"https://www.blocknative.com/\\" target=\\"_blank\\">
      <img src=\\"[object Object]\\" alt=\\"Blocknative\\" srcset=\\"[object Object] 2x\\">
      </a>
      </p>
    </div>
  
      </div>
    </div>
  </div>"
`;

exports[`dom-rendering event initialize-mobileBlocked should trigger correct DOM render when passed inlineCustomMsgs 1`] = `
"
    
  <div class=\\"bn-onboard-modal-shade\\">
    <div id=\\"bn-mobile-not-supported\\" class=\\"bn-onboard\\">
      <div class=\\"bn-onboard-modal bn-onboard-alert\\">
        <a href=\\"#\\" class=\\"bn-onboard-close\\">
          <span class=\\"bn-onboard-close-x\\"></span>
        </a>
        
	  <img src=\\"[object Object]\\" alt=\\"MobileNot Supported\\" srcset=\\"[object Object] 2x\\">
  
        <br><br>
        <h1 class=\\"h4\\">Mobile Not Supported</h1>
        <p>Our distributed application does not support mobile browsers. Please visit our site on a desktop browser. Thank you!</p>
        <br>
        
        
    <div class=\\"bn-onboarding-branding\\">
      <p>Powered by
      <a href=\\"https://www.blocknative.com/\\" target=\\"_blank\\">
      <img src=\\"[object Object]\\" alt=\\"Blocknative\\" srcset=\\"[object Object] 2x\\">
      </a>
      </p>
    </div>
  
      </div>
    </div>
  </div>"
`;
